css/base.css
@font-face {
	font-family: Novecentowide;
	src: url("fonts/Novecentowide-Normal.otf") format("opentype");
}

@font-face {
	font-family: OpenSans;
	src: url("fonts/Open_Sans/OpenSans-Regular.ttf") format("opentype");
}

@font-face {
	font-family: OpenSansBold;
	src: url("fonts/Open_Sans/OpenSans-Bold.ttf") format("opentype");
}


body
{
	background-color: #3d3d3d;
	font-family: OpenSans, Helvetica;
	color: #ddd;
	font-size: 12px;
	padding-top: 51px;
}

.container
{
	width: 1024px;
}

h1
{
	font-size: 28px;
}

.navbar
{
	background-color: #222;
}

.navbar-inner
{
	background: inherit;
	text-shadow: inherit;
	border: inherit;
	box-shadow: inherit !important;
	padding-right: 10px !important;
	padding-left: 10px !important;
	padding-top: 5px;
	padding-bottom: 5px;
}

.brand
{
	left: 20px;
	margin-left: 10px;
	margin-right: 20px;
	padding: 0px !important;
}

.brand img
{
	max-height: 35px;

}

.nav-me
{
	background-color: #ff2d00;
}

.nav-me a
{
	background-color: #ff2d00;
	color: #fff !important;
	text-shadow: none !important;
}

.navbar-right
{
	margin-top: 5px;
}

.nav-me .dropdown a
{
	height: 12px;
}

.nav-me .dropdown 
{
	width: 100px;
	line-height: 10px;
	display: table-cell;
	vertical-align: middle;
}

.nav-me .dropdown.open
{
	background-color: #fff;
}

.nav-me .dropdown.open .label
{
	color: #000 !important;
}

.nav-me .dropdown-menu
{
	border: inherit;
	border-radius: inherit;
	background-color: #ff2d00;
	color: #fff;
	width: 100px;
}

.nav-me .dropdown-menu:after,
.nav-me .dropdown-menu:before
{
	display: none !important;
}

.button
{
	background-color: #ff2d00;
	height: 20px;
	color: #fff;
	padding: 5px;
}

.open
{
	background-color: #fff;
	color: #000;
}

.button:hover
{
	cursor: pointer;
}

.sub-navbar
{
	margin-bottom: 15px;
	width: 100%;
	line-height: 25px;
}

.breadcrumb-links a
{
	margin-left: 5px;
	margin-right: 5px;

}

.sub-navbar .breadcrumb-links
{
	width: 450px;
}

.sub-navbar,
.sub-navbar a
{
	font-size: 14px;
	vertical-align: middle;
}

.breadcrumb-back
{
	color: #ff2100;	
}

.breadcrumb-here
{
	color: #fff;	
}

#header h3
{
	margin-top: -10px;
	margin-bottom: -20px;
}

#content
{
	padding-top: 30px;
}

